# EEG_Cleaner

./: .env  .gitignore  README.md  config.py  pyproject.toml  read.py
run/: clean.py  de.py  ica.py  make_labels_seed7.py  trial_split_for_dl.py  trial_split_for_pretrain.py  trial_split_seed7_clean_for_finetune.py
