[project]
name = "preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.3",
    "mne==0.23.0",
    "numpy==1.18",
    "openpyxl>=3.1.5",
    "pandas>=1.3.3",
    "scipy>=1.8.1",
    "tqdm>=4.67.3",
]
